force-app/main/default/objects/GoTo_Session__c/GoTo_Session__c.object-meta.xml
<CustomObject>
    <label>GoTo Session</label>
    <nameField>
        <displayFormat>GS-{000000}</displayFormat>
        <label>GoTo Session</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GoTo Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>