force-app/main/default/objects/GoTo_Session__c/fields/Attendance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Percentage__c</fullName>
    <label>Attendance Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>