force-app/main/default/objects/GoTo_Session__c/fields/GoTo_Webinar__c.field-meta.xml
<CustomField>
    <fullName>GoTo_Webinar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GoTo Webinar</label>
    <referenceTo>GoTo_Webinar__c</referenceTo>
    <relationshipLabel>GoTo Sessions</relationshipLabel>
    <relationshipName>GoTo_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>