force-app/main/default/objects/GoTo_Session__c/fields/Percentage_Surveys_Completed__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Surveys_Completed__c</fullName>
    <label>Percentage Surveys Completed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>