force-app/main/default/objects/GoTo_Session__c/fields/Poll_Count__c.field-meta.xml
<CustomField>
    <fullName>Poll_Count__c</fullName>
    <label>Poll Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>