force-app/main/default/objects/GoTo_Session__c/fields/Question_Asked__c.field-meta.xml
<CustomField>
    <fullName>Question_Asked__c</fullName>
    <label>Question Asked</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>