force-app/main/default/objects/GoTo_Session__c/fields/Recurrence_Period__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Period__c</fullName>
    <label>Recurrence Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>