force-app/main/default/objects/GoTo_Session__c/fields/Registrant_Count__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Count__c</fullName>
    <label>Registrant Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>