force-app/main/default/objects/GoTo_Session__c/fields/Registration_Link_Clicked_Count__c.field-meta.xml
<CustomField>
    <fullName>Registration_Link_Clicked_Count__c</fullName>
    <label>Registration Link Clicked Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>