force-app/main/default/objects/GoTo_Session__c/fields/Session_Key__c.field-meta.xml
<CustomField>
    <fullName>Session_Key__c</fullName>
    <externalId>true</externalId>
    <label>Session Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>