force-app/main/default/objects/GoTo_Session__c/fields/Survey_Count__c.field-meta.xml
<CustomField>
    <fullName>Survey_Count__c</fullName>
    <label>Survey Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>