force-app/main/default/objects/GoTo_Session__c/fields/Webinar_Key__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Key__c</fullName>
    <label>Webinar Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>