force-app/main/default/objects/GoTo_Session__c/fields/Webinar_Name__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Name__c</fullName>
    <label>Webinar Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>